syntax = "proto3";

package rate_limiter;

service RateLimiter {
  rpc Ping(RateLimitRequest) returns (RateLimitResponse) {}
}

message RateLimitRequest {
  string id = 1;
  int32 tokens_requested = 2;
}

message RateLimitResponse {
  string status = 1;
}
